--- a/index.html
+++ b/index.html
@@ -167,16 +167,50 @@
 </div>
 </body>
 <script src="spaghetti.js"></script>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #282c34;
+            color: #fff;
         }
-        .text-center {
-            text-align: center;
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 10;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
         }
+
+        .modal-content {
+            background-color: #fefefe;
+            padding: 20px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 400px; /* Adjust for larger screens */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+        }
+
         .fancy-button {
             background-color: #FF7F50;
             color: white;
@@ -184,58 +218,15 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            font-weight: bold;
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
+
         .fancy-button:hover {
             background-color: #FF4500;
+            transform: scale(1.05);
         }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgb(0, 0, 0);
-            background-color: rgba(0, 0, 0, 0.4);
-            padding-top: 60px;
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 30%;
-            border-radius: 10px;
-        }
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover, .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .avatar {
-            width: 100px;
-            border-radius: 50%;
-        }
-        .container {
-            padding: 16px;
-        }
-        input[type="text"], input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-            border-radius: 5px;
-        }
+
         .cancelbtn {
             background-color: #f44336;
             color: white;
@@ -244,13 +235,35 @@
             cursor: pointer;
             border-radius: 5px;
         }
+
         .cancelbtn:hover {
             background-color: #d32f2f;
         }
-        .error-message {
-            color: red;
-            font-size: 14px;
-            margin-top: 10px;
+
+        .avatar {
+            width: 100px;
+            border-radius: 50%;
+        }
+
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 12px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        @media (min-width: 768px) {
+            .modal-content {
+                padding: 30px;
+            }
+
+            .fancy-button {
+                padding: 15px 30px;
+                font-size: 18px;
+            }
         }
     </style>
     <script>
@@ -260,9 +273,9 @@
             const username = document.getElementById('uname').value;
             const password = document.getElementById('psw').value;
 
-            if (username === 'killman' && password === 'aattiiff') {
+            if (username === 'admin' && password === 'password') {
                 alert('Login successful!');
-                window.location.href = "https://786promax.github.io/voie.github.io/"; // Redirect to the desired page
+                window.location.href = "https://example.com"; // Redirect to the desired page
             } else {
                 const errorMessage = document.getElementById('error-message');
                 errorMessage.textContent = 'Invalid username or password.';
@@ -270,22 +283,23 @@
         }
     </script>
 </head>
-<body>
+<body class="flex flex-col items-center justify-center min-h-screen">
 
-    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Don't click the button below :</h2>
-    <div class="flex justify-center mt-4">
-        <button onclick="document.getElementById('id01').style.display='block'" class="fancy-button">
+    <h2 class="text-center text-2xl font-semibold text-yellow-400">Don't click the button below:</h2>
+    <div class="mt-4">
+        <button onclick="document.getElementById('id01').style.display='flex'" class="fancy-button">
             Don't click me
         </button>
     </div>
 
+    <!-- Modal -->
     <div id="id01" class="modal">
         <div class="modal-content">
+            <span onclick="document.getElementById('id01').style.display='none'" class="close">&times;</span>
             <div class="imgcontainer">
-                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
                 <img src="op.png" alt="Avatar" class="avatar">
             </div>
-            <form id="loginForm" onsubmit="return redirectToSite(event)">
+            <form id="loginForm" onsubmit="redirectToSite(event)">
                 <div class="container">
                     <label for="uname"><b>Username</b></label>
                     <input type="text" id="uname" placeholder="Enter Username" required>
@@ -298,16 +312,17 @@
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
                 </div>
-                <div class="container" style="background-color:#f1f1f1">
+                <div class="container bg-gray-100 mt-4 p-2 rounded-lg">
                     <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
                         Cancel
                     </button>
                     <span class="psw">Forgot <a href="#">password?</a></span>
                 </div>
-                <p id="error-message" class="error-message"></p>
+                <p id="error-message" class="text-red-600 text-sm mt-2"></p>
             </form>
         </div>
     </div>
 
 </body>
 </html>
+
