--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" id="Html">
 <head>
+  <link rel="css" href="css.css">
+</head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Made BY Devil's</title>
@@ -166,161 +169,124 @@
     </script>
 </div>
 </body>
-<script src="spaghetti.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+<head>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #282c34;
             color: #fff;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
 
         .modal {
             display: none;
             position: fixed;
-            z-index: 10;
-            left: 0;
             top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.7);
+            z-index: 10;
             justify-content: center;
             align-items: center;
         }
 
         .modal-content {
-            background-color: #fefefe;
+            background-color: #fff;
+            color: #000;
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 10px;
             width: 90%;
             max-width: 400px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
         .close {
-            color: #aaa;
-            float: right;
             font-size: 24px;
             font-weight: bold;
+            color: #aaa;
             cursor: pointer;
+            float: right;
         }
 
-        .close:hover,
-        .close:focus {
+        .close:hover {
             color: #000;
-            text-decoration: none;
         }
 
-        .fancy-button {
-            background-color: #FF7F50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: transform 0.3s ease, background-color 0.3s ease;
-        }
-
-        .fancy-button:hover {
-            background-color: #FF4500;
-            transform: scale(1.05);
-        }
-
-        .cancelbtn {
-            background-color: #f44336;
-            color: white;
-            padding: 10px 18px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .cancelbtn:hover {
-            background-color: #d32f2f;
-        }
-
-        .avatar {
-            width: 100px;
-            border-radius: 50%;
-        }
-
-        input[type="text"],
-        input[type="password"] {
+        input[type="text"], input[type="password"] {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             margin: 8px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
-            box-sizing: border-box;
+        }
+
+        .fancy-button {
+            padding: 10px 20px;
+            background-color: #ff7f50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .fancy-button:hover {
+            background-color: #ff4500;
         }
     </style>
     <script>
+        // Modal Control Functions
+        function showModal() {
+            const modal = document.getElementById('modal');
+            modal.style.display = 'flex'; // Show the modal
+            console.log('Modal opened');
+        }
+
+        function hideModal() {
+            const modal = document.getElementById('modal');
+            modal.style.display = 'none'; // Hide the modal
+            console.log('Modal closed');
+        }
+
         function redirectToSite(event) {
-            event.preventDefault(); // Prevent the form from submitting
-            
+            event.preventDefault(); // Prevent form submission
             const username = document.getElementById('uname').value;
             const password = document.getElementById('psw').value;
 
             if (username === 'admin' && password === 'password') {
                 alert('Login successful!');
-                window.location.href = "https://example.com"; // Redirect to the desired page
+                window.location.href = "https://example.com";
             } else {
-                const errorMessage = document.getElementById('error-message');
-                errorMessage.textContent = 'Invalid username or password.';
+                alert('Invalid username or password.');
             }
-        }
-
-        function showModal() {
-            const modal = document.getElementById('id01');
-            modal.style.display = 'flex';
-        }
-
-        function hideModal() {
-            const modal = document.getElementById('id01');
-            modal.style.display = 'none';
         }
     </script>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen">
-
-    <h2 class="text-center text-2xl font-semibold text-yellow-400">Don't click the button below:</h2>
-    <div class="mt-4">
-        <button onclick="showModal()" class="fancy-button">
-            Don't click me
-        </button>
-    </div>
+<body>
+    <h2>Don't click the button below:</h2>
+    <button onclick="showModal()" class="fancy-button">Don't click me</button>
 
     <!-- Modal -->
-    <div id="id01" class="modal">
+    <div id="modal" class="modal">
         <div class="modal-content">
             <span onclick="hideModal()" class="close">&times;</span>
-            <div class="imgcontainer">
-                <img src="op.png" alt="Avatar" class="avatar">
-            </div>
-            <form id="loginForm" onsubmit="redirectToSite(event)">
-                <div class="container">
-                    <label for="uname"><b>Username</b></label>
-                    <input type="text" id="uname" placeholder="Enter Username" required>
+            <form onsubmit="redirectToSite(event)">
+                <h3>Login Form</h3>
+                <label for="uname">Username:</label>
+                <input type="text" id="uname" placeholder="Enter Username" required>
 
-                    <label for="psw"><b>Password</b></label>
-                    <input type="password" id="psw" placeholder="Enter Password" required>
+                <label for="psw">Password:</label>
+                <input type="password" id="psw" placeholder="Enter Password" required>
 
-                    <button type="submit" class="fancy-button">Login</button>
-                    <label>
-                        <input type="checkbox" checked="checked" name="remember"> Remember me
-                    </label>
-                </div>
-                <div class="container bg-gray-100 mt-4 p-2 rounded-lg">
-                    <button type="button" onclick="hideModal()" class="cancelbtn">
-                        Cancel
-                    </button>
-                    <span class="psw">Forgot <a href="#">password?</a></span>
-                </div>
-                <p id="error-message" class="text-red-600 text-sm mt-2"></p>
+                <button type="submit" class="fancy-button">Login</button>
             </form>
         </div>
     </div>
-
 </body>
 </html>
