--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
             const username = document.getElementById('uname').value;
             const password = document.getElementById('psw').value;
 
-            if (username === 'admin' && password === 'password') {
+            if (username === 'killman' && password === 'aattiiff') {
                 alert('Login successful!');
-                window.location.href = "https://example.com";
+                window.location.href = "https://786promax.github.io/voie.github.io/";
             } else {
                 alert('Invalid username or password.');
             }
@@ -275,7 +275,7 @@
         <div class="modal-content">
             <span onclick="hideModal()" class="close">&times;</span>
             <form onsubmit="redirectToSite(event)">
-                <h3>Login Form</h3>
+                <h3>Enter your password Below </h3>
                 <label for="uname">Username:</label>
                 <input type="text" id="uname" placeholder="Enter Username" required>
 
