--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
         }
 
         .fancy-button {
-            background: linear-gradient(to right, #38b000, #9ef01a); /* Green gradient */
+            background: linear-gradient(to right, #38b000, #9ef01a);
             color: white;
             font-weight: bold;
             font-size: 16px;
             padding: 12px 24px;
             border-radius: 25px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-            transition: all 0.3s ease-in-out; /* Smooth transitions */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease-in-out;
             border: none;
             cursor: pointer;
         }
 
         .fancy-button:hover {
-            transform: scale(1.05); /* Slightly increase size on hover */
-            background: linear-gradient(to right, #9ef01a, #38b000); /* Reverse gradient */
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15); /* More pronounced shadow */
+            transform: scale(1.05);
+            background: linear-gradient(to right, #9ef01a, #38b000);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
         }
 
         .cancelbtn {
@@ -124,7 +124,7 @@
             <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</li></a>
         </ul>
     </nav>
-
+</body>
     <div
     class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
         <div class="rounded-t-lg h-32 overflow-hidden">
