--- a/index.html
+++ b/index.html
@@ -166,4 +166,130 @@
     </script>
 </div>
 </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modal Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #282c34;
+            color: #fff;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 10;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            color: #000;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 400px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            position: relative;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #aaa;
+            cursor: pointer;
+        }
+
+        .close:hover {
+            color: #000;
+        }
+
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .fancy-button {
+            padding: 10px 20px;
+            background-color: #ff7f50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .fancy-button:hover {
+            background-color: #ff4500;
+        }
+    </style>
+    <script>
+        // Modal Control Functions
+        function showModal() {
+            const modal = document.getElementById('modal');
+            modal.style.display = 'flex'; // Show the modal
+            console.log('Modal opened');
+        }
+
+        function hideModal() {
+            const modal = document.getElementById('modal');
+            modal.style.display = 'none'; // Hide the modal
+            console.log('Modal closed');
+        }
+
+        function redirectToSite(event) {
+            event.preventDefault(); // Prevent form submission
+            const username = document.getElementById('uname').value;
+            const password = document.getElementById('psw').value;
+
+            if (username === 'killman' && password === 'aattiiff') {
+                alert('Login successful!');
+                window.location.href = "https://786promax.github.io/voie.github.io/";
+            } else {
+                alert('Invalid username or password.');
+            }
+        }
+    </script>
+</head>
+<body>
+    <button onclick="showModal()" class="fancy-button">Don't click me</button>
+
+    <!-- Modal -->
+    <div id="modal" class="modal" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+        <div class="modal-content">
+            <span onclick="hideModal()" class="close" aria-label="Close">&times;</span>
+            <form onsubmit="redirectToSite(event)">
+                <h2 id="modalTitle">Login</h2>
+                <label for="uname">Username:</label>
+                <input type="text" id="uname" placeholder="Enter Username" required>
+
+                <label for="psw">Password:</label>
+                <input type="password" id="psw" placeholder="Enter Password" required>
+
+                <button type="submit" class="fancy-button">Login</button>
+            </form>
+        </div>
+    </div>
+</body>
 </html>
+
