--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 </div>
 </body>
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal Login</title>
