--- a/index.html
+++ b/index.html
@@ -106,18 +106,13 @@
     </style>
 </head>
 <body class="flex flex-col items-start bg-gray-100 dark:bg-gray-900">
-    <nav id="custom-navbar" class="flex flex-col lg:flex-row justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
-        <div class="flex justify-between items-center w-full lg:w-auto">
+    <nav id="custom-navbar" class="flex flex-row justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
+        <div class="flex justify-between items-center w-auto">
             <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
                 Mr.Kind
             </span>
-            <button id="nav-hamburger" class="lg:hidden text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
-                </svg>
-            </button>
         </div>
-        <ul id="nav-mobileMenu" class="hidden lg:flex lg:flex-row lg:space-x-4 lg:items-center w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 lg:bg-transparent lg:shadow-none shadow-lg">
+        <ul class="flex flex-row space-x-4 items-center w-auto">
             <a href="https://786promax.github.io/rocketfuel.github.io/">
                 <li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li>
             </a>
@@ -132,6 +127,21 @@
             </a>
         </ul>
     </nav>
+
+    <style>
+        /* Default styles for the menu */
+        #custom-navbar {
+            display: flex;
+        }
+
+        /* Hide the navigation for screens smaller than 1024px (PC breakpoint) */
+        @media (max-width: 1024px) {
+            #custom-navbar {
+                display: none;
+            }
+        }
+    </style>
+</body>
 
     <script>
         (function () {
