--- a/index.html
+++ b/index.html
@@ -155,46 +155,99 @@
         })();
     </script>
 </body>
-
-
-    <div
-    class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
-        <div class="rounded-t-lg h-32 overflow-hidden">
-            <img class="object-cover object-center h-60 w-96" src='https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg' alt='kkkm'>
-        </div>
-        <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
-            <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='Screenshot 2024-12-06 201206.png' alt='Woman looking front'>
-        </div>
-        <div class="text-center mt-2">
-            <h2 class="font-semibold dark:text-gray-50">Aatif</h2>
-            <p class="text-gray-500 dark:text-gray-200">Owner/Developer</p>
-        </div>
-        <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
-            <li class="flex flex-col items-center justify-around">
-                <img id="user" src="user.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-            <li class="flex flex-col items-center justify-between">
-                <img id="train" src="train.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-            <li class="flex flex-col items-center justify-around">
-                <img id="star" src="star.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-        </ul>
+<div
+    id="profile-card"
+    class="profile-card max-w-2xl mx-4 sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900 dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
+    <div class="profile-card-header rounded-t-lg h-32 overflow-hidden">
+        <img class="profile-card-banner object-cover object-center h-60 w-96" src="https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg" alt="Nebula">
     </div>
+    <div class="profile-card-avatar mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
+        <img class="profile-card-image object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src="Screenshot 2024-12-06 201206.png" alt="Aatif">
+    </div>
+    <div class="profile-card-text text-center mt-2">
+        <h2 class="profile-card-name font-semibold dark:text-gray-50">Aatif</h2>
+        <p class="profile-card-role text-gray-500 dark:text-gray-200">Owner/Developer</p>
+    </div>
+    <ul class="profile-card-stats py-4 mt-2 text-gray-700 flex items-center justify-around">
+        <li class="profile-card-stat flex flex-col items-center justify-around">
+            <img id="profile-user-icon" src="user.svg" alt="User Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="profile-card-stat flex flex-col items-center justify-between">
+            <img id="profile-train-icon" src="train.svg" alt="Train Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="profile-card-stat flex flex-col items-center justify-around">
+            <img id="profile-star-icon" src="star.svg" alt="Star Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
+        </li>
+    </ul>
+</div>
 
-    <script>
-        // Hamburger Menu Toggle Logic
-        const hamburger = document.getElementById('hamburger');
-        const mobileMenu = document.getElementById('mobileMenu');
+<style>
+    /* Scoped styles for the profile card */
+    #profile-card {
+        max-width: 24rem;
+        margin: 4rem auto;
+        background-color: white;
+        color: #1a202c; /* Tailwind's gray-900 */
+        border-radius: 0.5rem;
+        overflow: hidden;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
 
-        hamburger.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden'); // Show or hide the menu
-            mobileMenu.classList.toggle('block');  // Ensure it takes up space when visible
-        });
-    </script>
+    #profile-card:hover {
+        transform: translateY(-0.25rem);
+        box-shadow: 0px 10px 15px -3px rgba(237, 69, 166, 0.4);
+    }
+
+    #profile-card .profile-card-header img {
+        height: 15rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    #profile-card .profile-card-avatar {
+        position: relative;
+        top: -4rem;
+        width: 8rem;
+        height: 8rem;
+        border-radius: 50%;
+        border: 4px solid white;
+        overflow: hidden;
+    }
+
+    #profile-card .profile-card-avatar img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    #profile-card .profile-card-text h2 {
+        font-size: 1.25rem;
+        font-weight: 600;
+    }
+
+    #profile-card .profile-card-stats {
+        display: flex;
+        justify-content: space-around;
+        padding: 1rem;
+    }
+
+    #profile-card .profile-card-stats li {
+        text-align: center;
+    }
+
+    #profile-card .profile-card-icon {
+        margin-bottom: 0.25rem;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    #profile-card .profile-card-icon:hover {
+        transform: translateY(-0.25rem);
+        box-shadow: 0px 5px 10px rgba(0, 255, 0, 0.3);
+    }
+</style>
 </div>
 </body>
 <head>
